--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "angular-oauth2-oidc": "^10.0.3",
+    "bootstrap": "^4.5.3",
     "firebase": "^7.15.0",
+    "jquery": "^1.9.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
